# digital-stylist

./: .gitignore  CollageService.py  README.md  collage.py  main.py  pyproject.toml  test.py  wardrobe.json
src/: collage.py  utilities.py  wardrobe.py
tests/: test_wardrobe.py
